fixed spacing issue on top element

--- a/styles.css
+++ b/styles.css
@@ -269,7 +269,7 @@ button {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	gap: 3rem;
+	gap: 2rem;
 }
 .home-skill {
 	display: flex;
@@ -501,6 +501,7 @@ constrain image size to anchor */ #work-image-home-one img {
 		grid-area: 1 / 4 / span 2 / span 1;
 		align-self: center;
 		align-items: flex-start;
+		justify-content: center;
 	}
 	.home-skill {
 		display: flex;
@@ -528,6 +529,7 @@ constrain image size to anchor */ #work-image-home-one img {
 		font-size: 1.4rem;
 		width: 100%;
 		display: flex;
+		flex-direction: row;
 		justify-content: space-between;
 	}
 	#work-image-home-one,
